...
}

/** Test tags to ensure correct UI behaviour of the popup */
object DeleteFriendPopupTestTags {
  const val POPUP = "DeleteFriendWholePopup"
  const val CANCEL_BUTTON = "DeleteFriendPopupCancelButton"
  const val DELETE_BUTTON = "DeleteFriendPopupDeleteButton"
}

/**
 * Popup that pops on the screen when the current user wants to delete a friend to ensure he wants
 * to delete
 *
...
