...
import com.android.mygarden.ui.utils.handleOfflineClick

/** Test tags used for accessing FriendListScreen UI elements in automated tests. */
object FriendListScreenTestTags {
  const val SCREEN = "FriendListScreen"
  const val FRIEND_COLUMN = "friendListColumn"
  const val REQUEST_CARD = "friendRequestCard"
  const val FRIEND_AVATAR = "friendAvatar"
  const val FRIEND_PSEUDO = "friendPseudo"
  const val NO_FRIEND = "noFriendText"

  fun getDelButtonForFriend(friendId: String) = "DeleteFriendButtonForId$friendId"
}
...
